  [3292581] Core Audio first aid by Heikki Lindholm
  [3205979] Compilation fixes for OpenBSD by Brad Smith
  [3290979] acpi/muldiv64 endian bug by Heikki Lindholm
  [3289459] Mac OS X audio missing framework dependency by Heikki Lindholm
  [3267459] fix xrandr related crash by Heikki Lindholm
  [3190995] add eth backend based on Slirp by Heikki Lindholm

- these S.F. bugs were closed/fixed
  [3062054] Problems with BIOS pointing device services (int 15h)
  [3277639] incompatible colours in palette
  [1788739] Abort on large memory setting
  [3012207] Int 13h FN 48h incorrect return values
  [3363289] holding shift key causes capslock hang
  [1819639] Two incompatible crc32 modules
  [3324111] configure for VCPP.NET issues
  [3190970] Installing linux causes a crash in pci_ide
  [3077616] Fedora 13 installation fails on Bochs 2.4.5
  [3294671] ./configure --enable-pci --disable-cdrom
  [3303818] wrong memory size is reported to GRUB (e820 problem?)
  [3297475] trace cache disabled mode will miss SMC
  [3170157] BIOS32 PCI service wrong length
  [3025030] PIT mistakenly connected to IRQ0 IOAPIC instead of IRQ2
  [3266738] GUI debugger does not update CPU mode correctly
  [3292571] SB16 doesn't reinit correctly
  [3175168] Cirrus CL-GD5446 emulation incorrect
  [3260134] Failed to compile when trace cache disabled
  [3197425] Error compile with vmx in vs2008/2010 and for correct x64

- these S.F. feature requests were closed/implemented
  [1197067] Screenshot for graphical
  [2800839] VMX-preemption timer
  [1507519] configurable CPUID
   [579002] Allow user to specify architecture
  [1228567] CPU option

-------------------------------------------------------------------------
Changes in 2.4.6 (February 22, 2011):

Brief summary :
- Support more host OS to run on:
  - Include win64 native binary in the release.
  - Fixed failures on big endian hosts.
- BIOS: Support for up to 2M ROM BIOS images.
- GUI: select mouse capture toggle method in .bochsrc.